--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>UTBot Scanner - ماسح الإشارات المتقدم</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-   <link rel="icon" type="image/x-icon" href="https://myzoma.github.io/image/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="image/favicon.ico">
 </head>
 <body>
     <div class="container">
