--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                     <label>
                         <span>الحساسية:</span>
                         <select id="sensitivity">
-                            <option value="high">عالية</option>
-                            <option value="normal" selected>عادية</option>
+                            <option value="high" selected>عالية</option>
+                            <option value="normal">عادية</option>
                             <option value="low">منخفضة</option>
                         </select>
                     </label>
