--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="header-content">
                 <div class="logo">
                     <i class="fas fa-robot"></i>
-                    <h1>UTBot Scanner</h1>
+                    <h1>The Smart Hunter</h1>
                     <span class="version">v2.0</span>
                 </div>
                 
