--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="footer-content">
-                <p>&copy; 2024 UTBot Scanner. جميع الحقوق محفوظة.</p>
+                <p>&copy; 2024 The Smart Hunter. جميع الحقوق محفوظة.</p>
                 <p class="disclaimer">
                     <i class="fas fa-exclamation-triangle"></i>
                     تحذير: التداول في العملات الرقمية ينطوي على مخاطر عالية. استخدم هذه الأداة على مسؤوليتك الخاصة.
