--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             <div class="settings-section">
                 <div class="settings-group">
                     <label>
-                        <span>فترة ATR:</span>
+                        <span>ST,Yas-1:</span>
                         <input type="number" id="atrPeriod" min="3" max="20" value="10">
                     </label>
                     
                     <label>
-                        <span>مضاعف ATR:</span>
+                        <span>ST,Yas-2:</span>
                         <input type="number" id="atrMultiplier" min="0.5" max="3" step="0.1" value="1.0">
                     </label>
                     
