--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="icon" type="image/x-icon" href="image/favicon.ico">
      <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <iframe src="https://github.com/myzoma/bott/blob/main/news-script.js"
-        style="width:100%;height:40px;border:none;overflow:hidden;"
-        scrolling="no">
-</iframe>
+   
 </head>
 <body>
     <div class="container">
@@ -40,7 +37,10 @@
                 </div>
             </div>
         </header>
-
+<iframe src="https://github.com/myzoma/bott/blob/main/news.html"
+        style="width:100%;height:40px;border:none;overflow:hidden;"
+        scrolling="no">
+</iframe>
         <!-- Control Panel -->
         <div class="control-panel">
             <div class="controls-section">
