--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
                 </div>
             </div>
         </header>
-<iframe src="https://github.com/myzoma/bott/blob/main/news.html"
-        style="width:100%;height:40px;border:none;overflow:hidden;"
+<iframe src="https://myzoma.github.io/bott/news.html"
+        style="width:100%; height:40px; border:none;" 
         scrolling="no">
 </iframe>
+
         <!-- Control Panel -->
         <div class="control-panel">
             <div class="controls-section">
