--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
                 </div>
             </div>
         </header>
-<iframe src="https://myzoma.github.io/bott/news.html"
-        style="width:100%; height:40px; border:none;" 
-        scrolling="no">
-</iframe>
+<iframe src="ticker.html" width="100%" height="60" style="border:none;overflow:hidden;" scrolling="no"></iframe>
 
         <!-- Control Panel -->
         <div class="control-panel">
