--- a/news.html
+++ b/news.html
@@ -122,8 +122,8 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/config.js"></script>
-    <script src="js/newsService.js"></script>
-    <script src="js/app.js"></script>
+    <script src="config.js"></script>
+    <script src="newsService.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
